@@ -1,3 +1,4 @@
+* Use between numbers in filter box
 * Fill 'to' with 'from' value on filter box
 * Add tab domain in URL
 * Use properties
